# VTFLib

./: .gitignore  .gitmodules  CMakeLists.txt
VTFCmd/: CMakeLists.txt
VTFLib/: CMakeLists.txt  Error.cpp  Error.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Float16.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  PosixFileApi.cpp  PosixFileApi.h  Proc.h  ProcReader.h  ProcWriter.h  Reader.h  VMTFile.cpp  VMTFile.h  VMTGroupNode.cpp  VMTGroupNode.h  VMTIntegerNode.cpp  VMTIntegerNode.h  VMTNode.cpp  VMTNode.h  VMTSingleNode.cpp  VMTSingleNode.h  VMTStringNode.cpp  VMTStringNode.h  VMTValueNode.h  VMTWrapper.h  VTFDXTn.h  VTFFile.cpp  VTFFile.h  VTFFormat.h  VTFLib.cpp  VTFLib.h  VTFLibTypes.h  VTFMathlib.h  (+3 more)
WIN32POSIXAbstraction/: CMakeLists.txt  FileApi.cpp  FileApi.h  WIN32POSIXAbstraction.h
lib/: VTFLib.h
